cros: Add a switch to turn off trilinear filtering.

Mipmap generation is not guaranteed to be GPU accelerated on all devices
that Chrome OS ships on, and without acceleration it is too slow to use
trilinear filtering.

In addition, some device drivers may not support correct mipmap generation.
We can use this flag as a workaround until driver bugs have been fixed.

This cl creates an ash switch so that we can turn off trilinear filtering.

Bug: 799501, b/72298538
Test: Can create the flag and turn off the trilinear filtering.
Change-Id: Ia711fce0bc037a391f4bb610e73af32301de7a89
Reviewed-on: https://chromium-review.googlesource.com/908251
Commit-Queue: Tao Wu <wutao@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536011}
Former-commit-id: ead73f584a60e1b228f5842395fd0161969ed904