ash/wm/window_mirror_view.h
@@ -26,7 +26,7 @@ namespace wm {
 // A view that mirrors the client area of a single window.
 class WindowMirrorView : public views::View {
  public:
-  WindowMirrorView(aura::Window* window, bool trilinear_filtering);
+  WindowMirrorView(aura::Window* window, bool trilinear_filtering_on_init);
   ~WindowMirrorView() override;
 
   // views::View:
