chrome/browser/flag_descriptions.h
@@ -1818,6 +1818,9 @@ extern const char kAshDisableLoginDimAndBlurDescription[];
 extern const char kAshDisableSmoothScreenRotationName[];
 extern const char kAshDisableSmoothScreenRotationDescription[];
 
+extern const char kAshDisableTrilinearFilteringName[];
+extern const char kAshDisableTrilinearFilteringDescription[];
+
 extern const char kAshEnableDisplayMoveWindowAccelsName[];
 extern const char kAshEnableDisplayMoveWindowAccelsDescription[];
 
